--- a/app/src/main/res/layout/activity_body.xml
+++ b/app/src/main/res/layout/activity_body.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".BodyActivity">
 
+    <ImageView
+        android:id="@+id/bodyView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_person_outline" />
 </android.support.constraint.ConstraintLayout>
