Added an option toggle camera views

--- a/app/src/main/res/layout/activity_live_camera.xml
+++ b/app/src/main/res/layout/activity_live_camera.xml
@@ -12,6 +12,35 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageButton
+        android:id="@+id/captureCameraButton"
+        android:layout_width="60dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:contentDescription="@string/capture"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ToggleButton
+        android:id="@+id/toggleCameraButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/ToggleCameraView"
+        android:textColor="@android:color/white"
+        android:textOff="@string/faceView"
+        android:textOn="@string/frontView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
