--- a/app/src/main/res/layout/activity_body.xml
+++ b/app/src/main/res/layout/activity_body.xml
@@ -78,7 +78,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:enabled="true"
-        android:text="Touch a Point"
+        android:text="Touch a Location"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/rotateButton"
