--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -15,8 +15,8 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/phoneHint"
-        android:inputType="phone"
-        android:selectAllOnFocus="true"
+        android:inputType="text"
+        android:selectAllOnFocus="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
