--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListActivity">
+    tools:context=".ListFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -59,7 +59,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +84,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:contentDescription="@android:string/cancel"
-            app:srcCompat="?attr/homeAsUpIndicator" />
+            android:src="?attr/homeAsUpIndicator" />
 
         <ImageView
             android:id="@+id/addButton"
@@ -97,7 +96,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:contentDescription="@string/add_text"
-            app:srcCompat="@android:drawable/ic_menu_add" />
+            android:src="@android:drawable/ic_menu_add" />
 
         <ImageView
             android:id="@+id/searchIcon"
@@ -109,7 +108,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:contentDescription="@string/search_text"
-            app:srcCompat="@android:drawable/ic_menu_search" />
+            android:src="@android:drawable/ic_menu_search" />
 
         <EditText
             android:id="@+id/seachField"
@@ -123,19 +122,4 @@
             android:textAlignment="textStart"
             android:textColor="@android:color/background_light" />
     </LinearLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
-
 </android.support.constraint.ConstraintLayout>
