--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -48,6 +48,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/start_date"
         android:layout_weight="1.5"/>
 
@@ -123,6 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="@string/end_date"
+        android:layout_marginLeft="5dp"
         android:layout_weight="1.5"/>
 
     <android.support.v7.widget.LinearLayoutCompat
@@ -193,6 +195,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/set_time"
         android:layout_weight="1.5"/>
 
