--- a/app/src/main/res/layout/activity_body.xml
+++ b/app/src/main/res/layout/activity_body.xml
@@ -10,7 +10,8 @@
     <ImageView
         android:id="@+id/bodyView"
         android:layout_width="0dp"
-        android:layout_height="514dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
